added sherch and ratings

--- a/Views/Movies/Delete.cshtml
+++ b/Views/Movies/Delete.cshtml
@@ -1,4 +1,4 @@
-@model MVCMovie.Models.Movie
+@model MVCmovie.Models.Movie
 
 @{
     ViewData["Title"] = "Delete";
@@ -30,10 +30,10 @@
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.title)
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.title)
+            @Html.DisplayFor(model => model.Title)
         </dd>
     </dl>
     
