--- a/Views/Movies/Create.cshtml
+++ b/Views/Movies/Create.cshtml
@@ -1,4 +1,4 @@
-@model MVCMovie.Models.Movie
+@model MVCmovie.Models.Movie
 
 @{
     ViewData["Title"] = "Create";
@@ -7,15 +7,35 @@
 <h2>Create</h2>
 
 <form asp-action="Create">
-    <div class="form-horizontal">
+    <div></div> class="form-horizontal">
         <h4>Movie</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div class="form-group">
+            <label asp-for="Title" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger" />
+            </div>
+        </div>
         <div class="form-group">
             <label asp-for="Genre" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="Genre" class="form-control" />
                 <span asp-validation-for="Genre" class="text-danger" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Rating" class="col-md-2 control-label"></label>
+                <div class="col-md-10">
+                    <input asp-for="Rating" class="form-control" />
+                    <span asp-validation-for="Rating" class="text-danger" />
+                </div>
+            </div>
+        <div class="form-group">
+            <label asp-for="ReleaseDate" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <input asp-for="ReleaseDate" class="form-control" />
+                <span asp-validation-for="ReleaseDate" class="text-danger" />
             </div>
         </div>
         <div class="form-group">
@@ -25,20 +45,8 @@
                 <span asp-validation-for="Price" class="text-danger" />
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="ReleaseDate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="ReleaseDate" class="form-control" />
-                <span asp-validation-for="ReleaseDate" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="title" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="title" class="form-control" />
-                <span asp-validation-for="title" class="text-danger" />
-            </div>
-        </div>
+
+
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
