--- a/Views/Movies/Details.cshtml
+++ b/Views/Movies/Details.cshtml
@@ -1,4 +1,4 @@
-@model MVCMovie.Models.Movie
+@model MVCmovie.Models.Movie
 
 @{
     ViewData["Title"] = "Details";
@@ -19,6 +19,12 @@
         <dt>
             @Html.DisplayNameFor(model => model.Price)
         </dt>
+        <dt>
+            @Html.DisplayFor(model => model.Rating)
+        </dt>
+        <dt>
+            @Html.DisplayNameFor(model => model.Rating)
+        </dt>
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
@@ -29,10 +35,10 @@
             @Html.DisplayFor(model => model.ReleaseDate)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.title)
+            @Html.DisplayNameFor(model => model.Title)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.title)
+            @Html.DisplayFor(model => model.Title)
         </dd>
     </dl>
 </div>
