--- a/Views/helloworld/Index.cshtml
+++ b/Views/helloworld/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-    this is a comment
+    this is a comment 
 *@
 @{
-        ViewData ["title"] = "movie list";
+    ViewData["Title"] = "Movie List";
 }
 
 <h2>Index</h2>
-<p>hello form our View Template</p>
+<p>Hello form our View Template</p>
